scrollbar bug: fixed

--- a/piattaforma/style/indexStyle.css
+++ b/piattaforma/style/indexStyle.css
@@ -67,13 +67,13 @@ body
     color: #fff;
     font-size: 16px;
     text-transform: uppercase;
-    width: 40%;
+    width: 50%;
     border: 0;
     background-color: rgba(244, 91, 105, 1);
     border-radius: 5px;
     margin-top: 10px;
     padding: 10px 10px;
-    margin-left: 82%;
+    margin-left: 80%;
     
 }
 #button
